# The_case_bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  thecasebot.conf
The_case_bot_folder/: the_case_bot.py
commands/: handlers.py
utils/: database.py
