[project]
name = "the-case-bot"
version = "0.1.0"
description = "a borderline useless telegram bot wrote in Python based on Aiogram 3 to lowercase, uppercase, capitalise the sent messages (just an exercise for me)"
authors = [
    {name = "Alessandrx204"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
